# Ecommerce-DE

./: README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 1cea2340b983_create_initial_tables.py
app/: main.py
app/api/routes/: users.py
app/config/: database.py
app/models/: __init__.py  address.py  card.py  cart.py  category.py  device.py  ordem_item.py  order.py  payment.py  product.py  review.py  user.py
app/schemas/: cart.py  cart_item.py  category.py  ordem_item.py  order.py  payment.py  product.py  review.py  user.py
app/services/: user.py
