[project]
name = "ecommercepj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "bcrypt==3.2.0",
    "fastapi[standard]>=0.115.12",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.40",
]

[dependency-groups]
dev = [
    "pyright>=1.1.398",
    "ruff>=0.11.2",
]
